# whydiditfail

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  action.yml  generate_chaos_logs.py  generate_production_logs.py  pyproject.toml  test_company_pipeline.py  wdif.yaml
.github/workflows/: ci.yml  publish.yml
benchmarks/: run_benchmark.py  run_benchmarks.py  synthesize.py
docs/: README.md  causal-propagation.md  deterministic-replay.md  replay-demo.md  research-frontiers.md  versioning.md
docs/articles/: why-deterministic-replay-matters.md
examples/: langsmith_trace.json  openinference_trace.json  opik_trace.json  phoenix_trace.json  sample_trace.json
examples/openinference/: README.md  semantic_trace.json
examples/opentelemetry/: README.md  otlp_genai_trace.json
tests/: test_chaos_hardening.py  test_cli.py  test_config.py  test_corporate_ci_harness.py  test_extractors.py  test_heuristics.py  test_parser.py  test_prod_hardening.py  test_production_stream.py  test_realtime_watch.py  test_replay.py  test_runner_export_remediation.py
wdif/: __init__.py  causal.py  cli.py  engine.py  export.py  extractors.py  github_action.py  ingestion.py  models.py  parser.py  ranking.py  realtime.py  report.py  security.py  tokenization.py
wdif/config/: __init__.py  engine.py
wdif/core/: __init__.py  runner.py
wdif/heuristics/: __init__.py  agent_loop.py  attention.py  context.py  grounding.py  loops.py  orphan.py  retriever.py  tool_error.py
wdif/remediation/: __init__.py  differ.py
wdif/replay/: __init__.py  engine.py
