[project]
name = "whydiditfail"
version = "0.1.0"
description = "A framework-agnostic, zero-API-cost local diagnostic engine for production LLM, RAG, and Agent failure topologies."
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = "MIT"
authors = [{ name = "Lahari", email = "laharitadepalli183@gmail.com" }]
keywords = ["llm", "observability", "opentelemetry", "openinference", "ci-cd", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "tiktoken>=0.7.0,<1.0.0",
    "rich>=13.7.1,<16.0.0",
    "typer>=0.12.3,<1.0.0",
    "pyyaml>=6.0.1,<7.0.0",
    "ijson>=3.2.3,<4.0.0",
]

[project.urls]
Repository = "https://github.com/Lahari99-cloud/whydiditfail"
Issues = "https://github.com/Lahari99-cloud/whydiditfail/issues"

[project.scripts]
wdif = "wdif.cli:app"

[tool.poetry]
packages = [{ include = "wdif" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
